now icos are shown

--- a/index.html
+++ b/index.html
@@ -204,9 +204,9 @@
                 <h3 class="contacts__titles">Phone:</h3>
                 <a href="tel:+44 212 432 444" class="links__phone">+44 212 432 444</a>
                 <h3 class="contacts__titles">Social media:</h3>
-                <a href="#"><img src="img/facebook.png" class="contacts__social"></a>
-                <a href="#"><img src="img/twitter.png" class="contacts__social"></a>
-                <a href="#"><img src="img/instagram.png" class="contacts__social"></a>
+                <a href="#"><img src="img/Facebook.png" class="contacts__social"></a>
+                <a href="#"><img src="img/Twitter.png" class="contacts__social"></a>
+                <a href="#"><img src="img/Instagram.png" class="contacts__social"></a>
             </div>
             <!--/contacts__links-->
         </div>
